# EEEN30330-Submissions

./: README.md
.stl/: Battery Holder.stl  Camera Plate.stl  Centre Chassis.stl  End Cap Camera.stl  End Cap.stl  Mecanum Wheel Adaptor.stl  Motor Holder.stl  Motors Chassis.stl
ROS2/: List of dependencies.txt  To Do.txt
ROS2/DAP + LiDAR/: setup.py
ROS2/DAP + LiDAR/config/: bridge.yaml  controllers.yaml
ROS2/DAP + LiDAR/launch/: sim_launch.py
ROS2/DAP + LiDAR/my_package/: daf_avoidance_node.py  lidar_obstacle_processor.py  my_robot_driver.py
ROS2/DAP + LiDAR/scripts/: go_to_goal_node.py
ROS2/DAP + LiDAR/urdf/: mechbot.urdf
ROS2/DAP + Stereo - Hardware/: Examples.txt  Raw Calibration Data.txt
ROS2/DAP + Stereo - Hardware BACKUP/: CMakeLists.txt  package.xml  setup.py
ROS2/DAP + Stereo - Hardware BACKUP/config/: daf_params.yaml
ROS2/DAP + Stereo - Hardware BACKUP/launch/: hardware_launch.py  sim_launch.py
ROS2/DAP + Stereo - Hardware BACKUP/my_package/: hardware_interface.py  pointcloud_filter.py  stereo_capture.py  stereo_obstacle_processor.py
ROS2/DAP + Stereo - Hardware/my_package/config/: bridge.yaml  controllers.yaml  left.yaml  right.yaml
ROS2/DAP + Stereo - Hardware/my_package/launch/: calibration_launch.py  hardware_launch.py
ROS2/DAP + Stereo - Hardware/my_package/my_package/: load_stereo_calibration.py  path_logger.py  pointcloud_filter.py  rpicam_stereo_node.py  stereo_obstacle_processor.py
ROS2/DAP + Stereo - Hardware/my_package/urdf/: mechbot.urdf  mechbot_hw.urdf
ROS2/PWM test/: package.xml  pwm_hw_node.py  pwm_test.py  setup.py
(+2 files in other folders)
