<package format="3">
  <name>pwm_test</name>
  <version>0.0.0</version>
  <description>PWM test</description>

  <maintainer email="austin@todo.todo">austin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>